<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#af0813"
    android:fillViewport="true"
    tools:context="com.tumblr.svandesigns.divinitysimplecrafting.ArrowFragment">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->
   <TextView
       style="@style/TitleText"
       android:text="@string/bless_gren"/>
    <TextView
        style="@style/DescText"
        android:text="@string/re_bless"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#FFFFFF"
        />
    <TextView
        style="@style/TitleText"
        android:text="@string/bless_oil_flask"/>
    <TextView
        style="@style/DescText"
        android:text="@string/re_b_oilf"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#FFFFFF"
        />
    <TextView
        style="@style/TitleText"
        android:text="@string/bles_wa_gren"/>
    <TextView
        style="@style/DescText"
        android:text="@string/bfilled_oil"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#FFFFFF"
        />
    <TextView
        style="@style/TitleText"
        android:text="@string/chem_gren"/>
    <TextView
        style="@style/DescText"
        android:text="@string/re_chem"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#FFFFFF"
        />
    <TextView
        style="@style/TitleText"
        android:text="@string/clus_gren"/>
    <TextView
        style="@style/DescText"
        android:text="@string/re_clus"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#FFFFFF"
        />
    <TextView
        style="@style/TitleText"
        android:text="@string/curs_gren"/>
    <TextView
        style="@style/DescText"
        android:text="@string/re_cur_clus"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#FFFFFF"
        />
    <TextView
        style="@style/TitleText"
        android:text="@string/cur_fir_gren"/>
    <TextView
        style="@style/DescText"
        android:text="@string/re_curfire"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#FFFFFF"
        />
    <TextView
        style="@style/TitleText"
        android:text="@string/re_cur_poisf"/>
    <TextView
        style="@style/DescText"
        android:text="@string/re_cur_poisf"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#FFFFFF"
        />
    <TextView
        style="@style/TitleText"
        android:text="@string/fros_gren"/>
    <TextView
        style="@style/DescText"
        android:text="@string/re_fros"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#FFFFFF"
        />
    <TextView
        style="@style/TitleText"
        android:text="@string/holy_gren"/>
    <TextView
        style="@style/DescText"
        android:text="@string/re_holy"/>
    <TextView
        style="@style/DescText"
        android:text="@string/re_holy2"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#FFFFFF"
        />
    <TextView
        style="@style/TitleText"
        android:text="@string/lov_gren"/>
    <TextView
        style="@style/DescText"
        android:text="@string/re_lov"/>
    <TextView
        style="@style/DescText"
        android:text="@string/re_lov2"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#FFFFFF"
        />
    <TextView
        style="@style/TitleText"
        android:text="@string/mind_gren"/>
    <TextView
        style="@style/DescText"
        android:text="@string/re_mind"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#FFFFFF"
        />
    <TextView
        style="@style/TitleText"
        android:text="@string/nail_gren"/>
    <TextView
        style="@style/DescText"
        android:text="@string/re_nail"/>
    <TextView
        style="@style/DescText"
        android:text="@string/re_nail2"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#FFFFFF"
        />
    <TextView
        style="@style/TitleText"
        android:text="@string/oil_flask"/>
    <TextView
        style="@style/DescText"
        android:text="@string/re_oilf"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#FFFFFF"
        />
    <TextView
        style="@style/TitleText"
        android:text="@string/pois_gren"/>
    <TextView
        style="@style/DescText"
        android:text="@string/re_pois"/>
 <View
     android:layout_width="match_parent"
     android:layout_height="1dp"
     android:background="#FFFFFF"
     />
 <TextView
  style="@style/TitleText"
  android:text="@string/pois_flask"/>
 <TextView
  style="@style/DescText"
  android:text="@string/re_poisf"/>
 <View
     android:layout_width="match_parent"
     android:layout_height="1dp"
     android:background="#FFFFFF"
     />
 <TextView
  style="@style/TitleText"
  android:text="@string/razz_gren"/>
 <TextView
  style="@style/DescText"
  android:text="@string/re_razz"/>
 <TextView
  style="@style/DescText"
  android:text="@string/re_razz2"/>
 <View
     android:layout_width="match_parent"
     android:layout_height="1dp"
     android:background="#FFFFFF"
     />
 <TextView
  style="@style/TitleText"
  android:text="@string/terr_gren"/>
 <TextView
  style="@style/DescText"
  android:text="@string/re_terr"/>
 <View
     android:layout_width="match_parent"
     android:layout_height="1dp"
     android:background="#FFFFFF"
     />
 <TextView
  style="@style/TitleText"
  android:text="@string/thun_gren"/>
 <TextView
  style="@style/DescText"
  android:text="@string/re_thun"/>
 <View
     android:layout_width="match_parent"
     android:layout_height="1dp"
     android:background="#FFFFFF"
     />
 <TextView
  style="@style/TitleText"
  android:text="@string/tre_gren"/>
 <TextView
  style="@style/DescText"
  android:text="@string/re_tre"/>
 <View
     android:layout_width="match_parent"
     android:layout_height="1dp"
     android:background="#FFFFFF"
     />
 <TextView
  style="@style/TitleText"
  android:text="@string/wat_gren"/>
 <TextView
  style="@style/DescText"
  android:text="@string/re_wat"/>


</LinearLayout>
</ScrollView>
