<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#af0813"
    tools:context="com.tumblr.svandesigns.divinitysimplecrafting.ArrowFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


    <TextView
    style="@style/TitleText"
    android:text="@string/bless_arrow"
        android:textColor="#lalelilou"
    />

    <TextView
        style="@style/DescText"
        android:text="@string/bless_re"
        />
    
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#FFFFFF"
        />
    <TextView
        style="@style/TitleText"
        android:text="@string/charm_arrow"/>
    <TextView
        style="@style/DescText"
        android:text="@string/charm_re"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#FFFFFF"
        />
    <TextView
        style="@style/TitleText"
        android:text="@string/exp_arrow"/>
    <TextView
        style="@style/DescText"
        android:text="@string/exp_re"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#FFFFFF"
        />
    <TextView
        style="@style/TitleText"
        android:text="@string/fire_arrow"
        />
    <TextView
        style="@style/DescText"
        android:text="@string/fire_re"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#FFFFFF"
        />
    <TextView
        style="@style/TitleText"
        android:text="@string/cold_arrow"
        />
    <TextView
        style="@style/DescText"
        android:text="@string/cold_re"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#FFFFFF"
        />
    <TextView
        style="@style/TitleText"
        android:text="@string/knock_arrow"/>
    <TextView
        style="@style/DescText"
        android:text="@string/knock_re"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#FFFFFF"
        />
    <TextView
        style="@style/TitleText"
        android:text="@string/necro_arrow"/>
    <TextView
        style="@style/DescText"
        android:text="@string/necro_re"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#FFFFFF" />

        <TextView
            style="@style/TitleText"
            android:text="@string/poison_arrow"
            />
        <TextView
            style="@style/DescText"
            android:text="@string/pois_re"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#FFFFFF"
            />
        <TextView
            style="@style/TitleText"
            android:text="@string/shock_arrow"/>
        <TextView
            style="@style/DescText"
            android:text="@string/shock_re"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#FFFFFF"
            />
        <TextView
            style="@style/TitleText"
            android:text="@string/slow_arrow"/>
        <TextView
            style="@style/DescText"
            android:text="@string/slow_re"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#FFFFFF"
            />
        <TextView
            style="@style/TitleText"
            android:text="@string/scloud_arrow"/>
        <TextView
            style="@style/DescText"
            android:text="@string/stat_re"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#FFFFFF"
            />
        <TextView
            style="@style/TitleText"
            android:text="@string/steam_arrow"/>
        <TextView
            style="@style/DescText"
            android:text="@string/steam_re"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#FFFFFF"
            />
        <TextView
            style="@style/TitleText"
            android:text="@string/water_arrow"/>
        <TextView
            style="@style/DescText"
            android:text="@string/water_re"/>

    </LinearLayout>
</ScrollView>
